# thruga

./: .gitignore  Cargo.toml  Makefile  README.md  cog.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
store/: Cargo.toml
store/src/: lib.rs
