[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
store = { path = "../store" }
anyhow = "1.0.66"
bevy = { version = "0.8.1", features = ["dynamic"] }
renet = "0.0.9"
bevy_renet = "0.0.5"
bincode="1.3.3"