[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
store = { path = "../store" }
serde = { version = "1.0.147", features = ["derive"] }
bincode = "1.3.3"
renet = "0.0.9"
log = "0.4.17"
env_logger="0.9.3"
